Fix contacting on mobile

--- a/scss/generics/_nav.scss
+++ b/scss/generics/_nav.scss
@@ -5,7 +5,6 @@
 .nav {
   @include font($size: 1.1rem, $weight: 500, $lh: 2.8rem);
   background-color: $nav;
-  display: inline-block;
   height: 3.25rem;
   outline: none;
   padding: 0;
